deploy/kubernetes/blue-green/service_node_port.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: auth-service
spec:
  type: NodePort
  selector:
    app: auth-service
    version: green
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30000
